fixed text align

--- a/client/styles/pages/_auth.scss
+++ b/client/styles/pages/_auth.scss
@@ -61,6 +61,9 @@
 
             @media(min-width: 750px) {
                 font-size: 14px;
+            }
+
+            @media(min-width: $screen-phone + 1) {
                 text-align: left;
             }
 
@@ -135,7 +138,6 @@
 
     .logo-container{
         margin-bottom: 66px;
-        text-align: left;
         .logo{
             width: 32px;
             height: 32px;
@@ -197,7 +199,6 @@
         .version-container{
             max-height: 35px;
             margin-top: -7px;
-            text-align: left;
             .logo{
                 max-height: 35px;
                 border-radius: 50%;
